# arango-entity-resolution

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit  pre-push
.github/workflows/: python-package.yml  runtime-platform-matrix.yml  ui-contract.yml
ci/runtime-quality/: quality_gate_policy.json
config/: test-database.md  vector_search_setup.md
docs/: IMPLEMENTATION_PLAN_2026-06.md  IMPLEMENTATION_PLAN_PHASE2_PHASE3.md  PRD.md  PROJECT_REVIEW_2026-06.md
docs/architecture/: CENTRALIZED_ER_SERVICE.md  ENTITY_RESOLUTION_UI.md
docs/development/: COMPREHENSIVE_PROJECT_REVIEW_2026-06-01.md  NEXT_RELEASE_IMPLEMENTATION_BRIEF.md  REMEDIATION_PLAN_2026-06-01.md  RUNTIME_HEALTH_CI_RUNBOOK.md  UI_IMPLEMENTATION_PLAN.md
docs/guides/: ADVANCED_MODULES_GUIDE.md
examples/: complete_entity_resolution_demo.py  vector_blocking_example.py
scripts/: benchmark_vector_blocking.py  comprehensive_qa_tests.py  export_openapi.py
scripts/migrations/: 001_fix_graphrag_self_loop_edges.py
tests/: conftest.py  test_ann_adapter.py  test_ann_adapter_unit.py  test_ann_adapter_vector_index.py  test_cluster_repair_service.py  test_cluster_repair_service_integration.py  test_clustering_backends_integration.py  test_cross_collection_matching_service_unit.py  test_curation_routes_integration.py  test_curation_service.py  test_curation_service_integration.py  test_data_manager_unit.py  test_em_estimator.py  test_evaluation_service.py  test_evaluation_service_integration.py  test_feedback_application_integration.py  test_feedback_application_service.py  test_fellegi_sunter_scorer.py  test_field_profiler.py  test_field_profiler_integration.py  test_golden_record_persistence_service.py  test_golden_record_service.py  test_graph_rag.py  test_llm_verifier.py  test_migrations.py  test_migrations_integration.py  test_model_parameter_estimator.py  test_model_parameter_estimator_integration.py  test_runtime_quality_policy_ci.py  test_runtime_quality_policy_service.py  test_similarity_edge_service_unit.py  test_similarity_service_legacy_unit.py  test_tuple_embedding_serializer.py  test_ui_core_additions.py  test_ui_routes.py  test_ui_schemas.py  test_vector_blocking_strategy_unit.py  test_weighted_field_similarity.py
ui/: index.html  openapi.json  package-lock.json  package.json  vite.config.ts
(+167 files in other folders)
